Fixed portfolio spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -182,8 +182,9 @@ body {
 
 .portfolioText {
 	position: relative;
-	height: auto;
+	height: 100%;
 	text-align: center;
+	margin-bottom: 10px;
 }
 
 #filler {
@@ -195,8 +196,16 @@ body {
 	width: 80%;
 	text-align: center;
 	position: absolute;
-	bottom: 0;
+	top: 0;
 	padding-left: 20%;
+}
+
+.portTitle {
+	margin-top: 0;
+}
+
+.portContainer {
+	position: relative;
 }
 
 .hidRight {
@@ -385,9 +394,18 @@ body {
 		margin-left: 0;
 	}
 
+	.portTitle {
+		font-size: 24px;
+	}
+
+	.portfolioText {
+		margin-top: 10px;
+	}
+
 	.button {
 		font-size: 1.4em;
-		padding: 3px
+		padding: 3px;
+		margin: 0 3px;
 	}
 
 	.top {
